[gd_scene load_steps=4 format=2]

[ext_resource path="res://bitmask.gd" type="Script" id=1]
[ext_resource path="res://ResourceLink.gd" type="Script" id=2]
[ext_resource path="res://ColorPickerButton.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
margin_left = 406.0
margin_top = 182.0
margin_right = 618.0
margin_bottom = 417.0
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 2

[node name="Label" type="Label" parent="CenterContainer/GridContainer"]
margin_right = 87.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Brush Color"
align = 2

[node name="ColorPickerButton" type="ColorPickerButton" parent="CenterContainer/GridContainer"]
margin_left = 112.0
margin_right = 212.0
margin_bottom = 20.0
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="Label4" type="Label" parent="CenterContainer/GridContainer"]
margin_top = 45.0
margin_right = 87.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Second Color "
align = 2

[node name="ColorPickerButton3" type="ColorPickerButton" parent="CenterContainer/GridContainer"]
margin_left = 112.0
margin_top = 45.0
margin_right = 212.0
margin_bottom = 65.0
color = Color( 0.12549, 0.12549, 0.12549, 1 )
edit_alpha = false

[node name="Label3" type="Label" parent="CenterContainer/GridContainer"]
margin_top = 90.0
margin_right = 87.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Texture:"
align = 2

[node name="Panel" type="Panel" parent="CenterContainer/GridContainer"]
margin_left = 112.0
margin_top = 90.0
margin_right = 212.0
margin_bottom = 190.0
rect_min_size = Vector2( 100, 100 )

[node name="TextureRect" type="TextureRect" parent="CenterContainer/GridContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 50, 50 )
stretch_mode = 3
script = ExtResource( 1 )
bg_source = "/root/world/Configure/Control/TabContainer/General/ColorPickerButton2"
png = "desktop.png"

[node name="ResourceLink" type="Node" parent="CenterContainer/GridContainer/Panel/TextureRect"]
script = ExtResource( 2 )
target_path = "/root/world/bg"

[node name="Label" type="Label" parent="CenterContainer/GridContainer/Panel"]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "name.png"
align = 1

[node name="Label2" type="Label" parent="CenterContainer/GridContainer"]
margin_top = 215.0
margin_right = 87.0
margin_bottom = 235.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Color Shift:"
align = 2

[node name="ColorPickerButton2" type="ColorPickerButton" parent="CenterContainer/GridContainer"]
margin_left = 112.0
margin_top = 215.0
margin_right = 212.0
margin_bottom = 235.0
color = Color( 0.345098, 0.192157, 0.403922, 1 )
script = ExtResource( 3 )
target = "/root/world/bg"

[connection signal="color_changed" from="CenterContainer/GridContainer/ColorPickerButton" to="CenterContainer/GridContainer/Panel/TextureRect" method="_on_ColorPickerButton_color_changed"]
[connection signal="color_changed" from="CenterContainer/GridContainer/ColorPickerButton3" to="CenterContainer/GridContainer/Panel/TextureRect" method="_on_ColorPickerButton3_color_changed"]
[connection signal="texture_changed" from="CenterContainer/GridContainer/Panel/TextureRect" to="CenterContainer/GridContainer/Panel/TextureRect/ResourceLink" method="_on_TextureRect_texture_changed"]
[connection signal="color_changed" from="CenterContainer/GridContainer/ColorPickerButton2" to="CenterContainer/GridContainer/ColorPickerButton2" method="_on_ColorPickerButton_color_changed"]
